--- a/components/AVPlayer/src/pages/index.astro
+++ b/components/AVPlayer/src/pages/index.astro
@@ -15,6 +15,9 @@ import AVPlayer from '../components/AVPlayer.astro'
     <h1>
        Sup 😎 !
     </h1>
-    <AVPlayer/>
+    <AVPlayer url={"https://www.youtube.com/watch?v=dsTXcSeAZq8&ab_channel=Fireship"}
+    controls={true}
+    pip
+    />
 </body>
 </html>
