--- a/components/XElement/src/components/XElement.astro
+++ b/components/XElement/src/components/XElement.astro
@@ -59,7 +59,13 @@ for (const name in attrs) {
 						: ``
 					}&&(${toAttributeString(data)})(e[0])).observe($);`
 					break
-
+				case 'observe':
+					listenerString += `new MutationObserver((e,o)=>${
+						opts.once
+							? `!o.disconnect()&&`
+						: ``
+					}(${toAttributeString(data)})(e[0])).observe($);`
+					break
 				default:
 					listenerString += `$.addEventListener(${toAttributeString(`"${type}"`)},${
 						opts.prevent
