--- a/components/Stylesheet/src/pages/index.astro
+++ b/components/Stylesheet/src/pages/index.astro
@@ -11,12 +11,9 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>Welcome to Astro</title>
 	<Stylesheet 
-		attributes={[{
-			href:'npm:bulma/css/bulma.css',
-			media:'screen'
-		}]}
-		
-	  	sanitize="all"
+			href='npm:bulma/css/bulma.css'
+			media='screen'
+		  	sanitize="all"
 	/>
 </head>
 
