--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -123,5 +123,5 @@ const onLoadString: string = listenerString || listenerOfOnce ? `(function(){let
 
 ---
 <XElement {...attrs}><slot /></XElement>{
-	onLoadString && <script type="module" src="data:text/javascript," onload={onLoadString}></script>
+	onLoadString && <script type="module" src="data:text/javascript," onload={onLoadString} hoist></script>
 }
