Updated pkg.json to support the new export file

--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -1,6 +1,6 @@
 ---
 /**
- * This only works on v0.21, due to the saitizer being brought into Astro =)
+ * This only works on v0.21, due to the sanitizer being brought into Astro =)
  * contains; 
  * - Data Binding,
  * - Fetch
