--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -32,6 +32,7 @@ export interface Props {
 	attrs?: any
 }
 
+const dataURI = `data:text/javascript,export default {}`
 
 const {
 	'@is': tag = null,
@@ -76,7 +77,7 @@ for (const name in attrs) {
 			/** Apply the Hydration selectors*/
 			switch (type) {
 				case 'do':
-					listenerOfOnce = `(${toAttributeString(data)})($);`
+					listenerOfOnce = `(${toAttributeString(data)})($,$$);`
 					break
 
 				case 'resize':
@@ -84,7 +85,7 @@ for (const name in attrs) {
 						opts.once
 							? `!o.disconnect()&&`
 						: ``
-					}(${toAttributeString(data)})(e[0])).observe($);`
+					}(${toAttributeString(data)})(e[0],$$)).observe($);`
 					break
 
 				case 'observe':
@@ -112,13 +113,13 @@ for (const name in attrs) {
 						opts.once
 							? `&&!o.disconnect()`
 						: ``
-					}&&(${toAttributeString(data)})(e[0])).observe($);`
+					}&&(${toAttributeString(data)})(e[0],$$)).observe($);`
 					break
 
 				default:
 					listenerString += `$.addEventListener(${toAttributeString(`"${type}"`)},${
 						opts.prevent
-							? `e=>{e.preventDefault();(${toAttributeString(data)})(e)}`
+							? `e=>{e.preventDefault();(${toAttributeString(data)})(e,$$)}`
 						: toAttributeString(data)
 					}${
 						opts.once
@@ -142,7 +143,7 @@ for (const name in attrs) {
 	}
 }
 
-const onLoadString: string = listenerString || listenerOfOnce ? `(function(){let $=this;${
+const onLoadString: string = listenerString || listenerOfOnce ? `(function(){let $=this,$$=(await import("${dataURI}")).default, fetch = window.fetch;${
 	listenerString
 };${
 	listenerOfOnce
@@ -151,5 +152,5 @@ const onLoadString: string = listenerString || listenerOfOnce ? `(function(){let
 ---
 
 <XElement {...attrs}><slot /></XElement>{
-	onLoadString && <script type="module" src="data:text/javascript," onload={onLoadString}></script>
+	onLoadString && <script type="module" src={dataURI} onload={onLoadString}></script>
 }
