--- a/components/XElement/XElement.astro
+++ b/components/XElement/XElement.astro
@@ -1,24 +1,14 @@
 ---
-/**
- * This only works on v0.21, due to the sanitizer being brought into Astro =)
- * contains; 
- * - Data Binding,
- * - Fetch
- * - Fixed Animation glitch
- * - Added Web-components to this 🤯 Pure Jonathan magic, 
- */
-
-
-
-const dataURI = `data:text/javascript,export default {}`
+import { Fragment } from 'astro/internal'
 
 const {
 	'@is': tag = null,
+	shadowroot,
 	...attrs
 } = Astro.props as Props
 
 /** Generates the HTML Tag for the Element */
-const XElement: string = tag === null ? 'span' : tag
+const XElement: string = tag === null || tag === '#text' ? Fragment : tag
 
 /** Formats the given value so that it can be placed into an attribute. */
 const toAttributeString = (value: any) => String(value)
@@ -118,12 +108,18 @@ for (const name in attrs) {
 	}
 }
 
-const onLoadString: string = listenerString || listenerOfOnce ? `(async function(){let $=this,$$=(await import("${dataURI}")).default;const fetch = window.fetch;${
+const onLoadString: string = listenerString || listenerOfOnce ? `(async function($$,$){$=this;$$=(await import($$.src)).default;const fetch=window.fetch;${
 	listenerString
 };${
 	listenerOfOnce
-}}).call(this.previousSibling,this.remove())` : null
+}}).call(this.previousSibling,this.remove()||this)` : null
+
+const Template = 'template'
 ---
-<XElement {...attrs}><slot /></XElement>{
-	onLoadString && <script type="module" src={dataURI} onload={onLoadString}></script>
+<XElement {...attrs}>{
+	shadowroot == null
+		? <slot>&#8203;</slot>
+	: <Template shadowroot="open"><slot>&#8203;</slot></Template>
+	}</XElement>{
+	onLoadString && <script type="module" src="data:text/javascript,export default {}" onload={onLoadString}></script>
 }
